[package]
name = "spirv-cross"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["glsl"]
nightly = []
glsl = []
hlsl = ["glsl"]
msl = ["glsl"]

[dependencies]
docfg = "0.1.0"
semver = "1.0.18"

[build-dependencies]
anyhow = "1.0.72"
bindgen = "0.66.1"
# cc = { version = "1.0.79", features = ["parallel"] }
cfg-if = "1.0.0"
cmake = "0.1.50"
flate2 = "1.0.26"
octocrab = "0.28.0"
reqwest = { version = "0.11.18", features = ["gzip"] }
tar = "0.4.39"
tokio = { version = "1.29.1", features = ["full"] }
